--- a/src/components/Cabecera/Cabecera.module.css
+++ b/src/components/Cabecera/Cabecera.module.css
@@ -1,29 +1,30 @@
-.cabecera{
+.cabecera {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1.1em  10em;
+    padding: 1.1em 10em;
     background-color: var(--negro);
 }
-a{
-    text-decoration: none;
 
+a {
+    text-decoration: none;
 }
-.logoContainer{
-height: 40px ;
+
+.logoContainer {
+    height: 40px;
     display: flex;
     align-items: center;
 }
 
-.cabecera img{
+.cabecera img {
     align-self: start;
 }
 
-.cabecera span{
+.cabecera span {
     align-self: end;
     text-transform: uppercase;
     font-weight: 600;
-    color: var(--blanco);
+    color: white;
     margin-left: 8px;
     font-size: 1.5rem;
 }
