--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,15 @@
-:root{
-  --font:"Montserrat" ,sans-serif;
-  --blanco:#FFF;
-  --negro:#222;
-  --gris:#E2E2E2;
+:root {
+    --font: "Montserrat", sans-serif;
+    --blanco: #fff;
+    --negro: #222;
+    --gris: #e2e2e2;
 }
 
+
 body {
-  margin: 0;
-  font-family: var(--font);
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: var(--font);
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
